2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* shared/irq/exception.S: Rename _Context_Switch_necessary to
	_Thread_Dispatch_necessary to more properly reflect the intent.

2010-07-06	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/irq/exception.S: Removed _ISR_Signals_to_thread_executing
	declaration.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1573/cpukit
	* shared/irq/exception.S: Add a per cpu data structure which contains
	the information required by RTEMS for each CPU core. This
	encapsulates information such as thread executing, heir, idle and
	dispatch needed.

2010-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/liblnk/lnklib.S, shared/liblnk/pmon.S, shared/liblnk/regs.h,
	shared/startup/idtmem.S, shared/startup/idttlb.S: New files.

2010-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/exception.S: rbtx4925, rbtx4938, and hurricane had very
	similar versions of exception. Now all use shared/irq/exception.S

2010-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/exception.S: New file.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* shared/gdbstub/mips-stub.c: Remove warnings.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/gdbstub/mips-stub.c: Add missing prototypes.

2007-09-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/gdbstub/mips-stub.c: Remove incorrect and unneccessary
	prototype of printk.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* jmr3904/tools/runtest: Do not run pppd.exe from batch mode script.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-09-14	Joel Sherrill <joel@OARcorp.com>

	* shared/gdbstub/mips-stub.c: Removed warnings.

2006-03-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: AC_CONFIG_SRCDIR(csb350).