@@ -9,7 +9,7 @@
 #  On-Line Applications Research Corporation (OAR).
 #
 #  The license and distribution terms for this file may be
-#  found in found in the file LICENSE in this distribution or at
+#  found in the file LICENSE in this distribution or at
 #  http://www.rtems.com/license/LICENSE.
 #
 #  $Id$
